--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,76 +1,53 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="@color/colorPrimaryDark"
-    android:orientation="vertical" >
-
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:indeterminate="false" />
+    android:background="@drawable/udacity">
 
     <TextView
-        android:id="@+id/score"
+        android:id="@+id/welcome_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/progress_bar"
-        android:layout_alignParentEnd="true"
-        android:textColor="@color/colorText"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:text="@string/initial_score"
-        android:padding="10dp"/>
-
-    <TextView
-        android:id="@+id/question_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="50dp"
-        android:gravity="center"
-        android:padding="20dp"
-        android:text="@string/question_1"
-        android:textColor="@color/colorText"
-        android:textStyle="bold"
-        android:textSize="30sp" />
-
+        android:textColor="@color/colorTextHome"
+        android:textSize="70sp"
+        android:text="@string/home" />
     <LinearLayout
-        android:layout_centerHorizontal="true"
-        android:layout_above="@id/score"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_below="@+id/welcome_text_view"
         android:padding="20dp"
-        android:orientation="horizontal">
-
+        android:layout_marginTop="150dp">
         <Button
-            android:id="@+id/a_button"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="@string/a_button"
-            android:textColor="@color/colorText"
-            android:textStyle="bold"
-            style="@style/Base.Widget.AppCompat.Button.Borderless"
-            android:background="@color/colorTrueButton"
-            android:textSize="20sp" />
-
+            android:id="@+id/instruction"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/my_button_bg"
+            android:layout_marginBottom="20dp"
+            android:textSize="50sp"
+            android:text="@string/instruction"
+            android:textColor="@color/colorText"/>
         <Button
-            android:id="@+id/b_button"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            style="@style/Base.Widget.AppCompat.Button.Borderless"
-            android:text="@string/b_button"
-            android:background="@color/colorFalseButton"
-            android:textColor="@color/colorText"
-            android:textStyle="bold"
-            android:textSize="20sp"/>
+            android:id="@+id/test"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/my_button_bg"
+            android:layout_marginBottom="20dp"
+            android:text="@string/test"
+            android:textSize="50sp"
+            android:textColor="@color/colorText"/>
+        <Button
+            android:id="@+id/exit"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/my_button_bg"
+            android:layout_marginBottom="20dp"
+            android:text="@string/exit"
+            android:textSize="50sp"
+            android:textColor="@color/colorText"/>
     </LinearLayout>
-
 </RelativeLayout>
